--- a/charts/metrics-servers/values.yaml
+++ b/charts/metrics-servers/values.yaml
@@ -27,7 +27,7 @@ hostNetwork:
   enabled: false
 
 image:
-  repository: gcr.io/google_containers/metrics-server-amd64
+  repository: gcr.io/google_containers/metrics-server-arm64
   tag: v0.3.1
   pullPolicy: IfNotPresent
 
@@ -36,7 +36,13 @@ args:
 # enable this if you have self-signed certificates, see: https://github.com/kubernetes-incubator/metrics-server
 #  - --kubelet-insecure-tls
 
-resources: {}
+resources:
+  requests:
+    cpu: 100m
+    memory: 256Mi
+  limits:
+    cpu: 250m
+    memory: 256Mi
 
 nodeSelector: {}
 
