--- a/charts/metrics-server/values.yaml
+++ b/charts/metrics-server/values.yaml
@@ -34,7 +34,7 @@ image:
 args:
   - --logtostderr
 # enable this if you have self-signed certificates, see: https://github.com/kubernetes-incubator/metrics-server
-#  - --kubelet-insecure-tls
+  - --kubelet-insecure-tls
 
 resources:
   requests:
