--- a/charts/k8s-dashboard/values.yaml
+++ b/charts/k8s-dashboard/values.yaml
@@ -123,7 +123,7 @@ rbac:
 
   # Specifies whether cluster-admin ClusterRole will be used for dashboard
   # ServiceAccount (NOT RECOMMENDED).
-  clusterAdminRole: false
+  clusterAdminRole: true
 
   # Start in ReadOnly mode.
   # Only dashboard-related Secrets and ConfigMaps will still be available for writing.
