--- a/charts/nginx-ingress/values.yaml
+++ b/charts/nginx-ingress/values.yaml
@@ -71,7 +71,8 @@ controller:
   ## E.g. to specify the default SSL certificate you can use
   ## extraArgs:
   ##   default-ssl-certificate: "<namespace>/<secret_name>"
-  extraArgs: {}
+  extraArgs:
+    default-ssl-certificate: "kubetools/sandermann.cloud"
 
   ## Additional environment variables to set
   extraEnvs: []
