--- a/examples/nfs-pv.yaml
+++ b/examples/nfs-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-prometheus
+  name: nfs-test01
 spec:
   capacity:
     storage: 1Mi
@@ -9,4 +9,4 @@ spec:
     - ReadWriteMany
   nfs:
     server: 10.10.10.120
-    path: "/prometheus"
+    path: "/debug"
