--- a/examples/nfs-pvc.yaml
+++ b/examples/nfs-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-prometheus
+  name: nfs-test01
 spec:
   accessModes:
     - ReadWriteMany
