--- a/examples/nfs_pod_example.yaml
+++ b/examples/nfs_pod_example.yaml
@@ -8,9 +8,9 @@ metadata:
   namespace: kubetools
 spec:
   volumes:
-    - name: nfs-prometheus
+    - name: nfs-test01
       persistentVolumeClaim:
-        claimName: nfs-prometheus
+        claimName: nfs-test01
   containers:
     - name: app
       image: ubuntu:16.04
@@ -23,5 +23,5 @@ spec:
       args: ["-c", "while true; do echo test; sleep 5; done"]
       volumeMounts:
         # name must match the volume name below
-        - name: nfs-prometheus
-          mountPath: "/mnt/nfs-prometheus"
+        - name: nfs-test01
+          mountPath: "/mnt/nfs-test01"
