--- a/configs/haproxy.cfg
+++ b/configs/haproxy.cfg
@@ -69,3 +69,12 @@ backend k8s-home-ingress-https
     option tcp-check
     server k8s-home-node1 10.10.10.104:30443 resolvers sandermann.cloud check port 30443
     server k8s-home-node2 10.10.10.105:30443 resolvers sandermann.cloud check port 30443
+
+### STATS Page for Prometheus Exporter
+listen stats # Define a listen section called "stats"
+bind :9000 # Listen on localhost:9000
+mode http
+stats enable  # Enable stats page
+stats hide-version  # Hide HAProxy version
+stats realm Haproxy\ Statistics  # Title text for popup window
+stats uri /haproxy_stats  # Stats URI
