--- a/configs/kubeadm.conf
+++ b/configs/kubeadm.conf
@@ -17,4 +17,10 @@ apiServer:
   - 10.10.10.108
   - 10.10.10.109
   - 10.10.10.110
+  - 10.10.10.140
+  - 10.10.10.141
+  - 10.10.10.142
+  - k8s-home-proxy.sandermann.cloud
+  - k8s-home-proxy1.sandermann.cloud
+  - k8s-home-proxy2.sandermann.cloud
   - k8s-home-api.sandermann.cloud
