--- a/charts/plex/manifests/svcs.yaml
+++ b/charts/plex/manifests/svcs.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: docker-plex
-  name: docker-plex
+    app: plex
+  name: plex
   namespace: apps
 spec:
   ports:
@@ -11,16 +11,8 @@ spec:
     port: 32400
     protocol: TCP
     targetPort: 32400
-  - name: https
-    port: 32443
-    protocol: TCP
-    targetPort: 32443
-  - name: debug
-    port: 32600
-    protocol: TCP
-    targetPort: 32600
   selector:
-    app: docker-plex
+    app: plex
   sessionAffinity: None
   type: ClusterIP
 ---
@@ -28,15 +20,15 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: docker-plex
-  name: docker-plex2
+    app: plex
+  name: plex-nodeport
   namespace: apps
 spec:
   ports:
-    - nodePort: 32112
+    - nodePort: 32400
       port: 32400
       protocol: TCP
       targetPort: 32400
   selector:
-    app: docker-plex
+    app: plex
   type: NodePort
