--- a/charts/plex/manifests/pvs.yaml
+++ b/charts/plex/manifests/pvs.yaml
@@ -1,22 +1,22 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: plex-docker-debug-media
+  name: plex-media
 spec:
   capacity:
-    storage: 20Gi
+    storage: 8Ti
   accessModes:
     - ReadWriteMany
   nfs:
     server: 10.10.10.120
-    path: "/debug/media"
+    path: "/media"
 
 ---
 
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: plex-docker-debug-library
+  name: plex-appdata
 spec:
   capacity:
     storage: 20Gi
@@ -24,4 +24,4 @@ spec:
     - ReadWriteMany
   nfs:
     server: 10.10.10.120
-    path: "/debug/library"
+    path: "/plex"
